Formatting cleanup